<resources>
    <string name="app_name">YuppTV Scope</string>
    <string name="shuzidianshi">TV</string>
    <string name="playing">Playing：</string>
    <string name="cctv1_1">CCTV-1</string>
    <string name="cctv1_2">CCTV_1</string>
    <string name="cctv1_3">CCTV-1综合</string>
    <string name="cctv1_4">ＣＣＴＶ－１</string>
    <string name="cctv1hd_1">CCTV-1高清</string>
    <string name="cctv1hd_2">ＣＣＴＶ－１(高清)</string>
    <string name="cctv1hd_3">CCTV1高清</string>
    <string name="cctv2_1">CCTV-2</string>
    <string name="cctv2_2">CCTV_2</string>
    <string name="cctv2_3">CCTV-2财经</string>
    <string name="cctv2_4">ＣＣＴＶ－２</string>
    <string name="cctv2hd_1">CCTV-2高清</string>
    <string name="cctv3_1">CCTV-3</string>
    <string name="cctv3_2">CCTV_3</string>
    <string name="cctv3_3">CCTV-3综艺</string>
    <string name="cctv3_4">ＣＣＴＶ－３</string>
    <string name="cctv3hd">CCTV-3高清</string>
    <string name="cctv4_1">CCTV-4</string>
    <string name="cctv4_2">CCTV_4</string>
    <string name="cctv4_3">CCTV-4中文国际</string>
    <string name="cctv4_4">ＣＣＴＶ－４</string>
    <string name="cctv5hd">CCTV-5高清</string>
    <string name="cctv5hd_1">CCTV5-体育赛事高清</string>
    <string name="cctv5hd_2">CCTV-5 高清</string>
    <string name="cctv5hd_3">CCTV-5+高清</string>
    <string name="cctv5_1">CCTV-5</string>
    <string name="cctv5_2">CCTV_5</string>
    <string name="cctv5_3">CCTV-5体育</string>
    <string name="cctv5_4">ＣＣＴＶ－５</string>
    <string name="cctv6_1">CCTV-6</string>
    <string name="cctv6_2">CCTV_6</string>
    <string name="cctv6_3">CCTV-6电影</string>
    <string name="cctv6_4">ＣＣＴＶ－６</string>
    <string name="cctv6hd">CCTV-6高清</string>
    <string name="cctv7_1">CCTV-7</string>
    <string name="cctv7_2">CCTV_7</string>
    <string name="cctv7_3">CCTV-7军事农业</string>
    <string name="cctv7_4">ＣＣＴＶ－７</string>
    <string name="cctv7hd_1">CCTV-7高清</string>
    <string name="cctv8_1">CCTV-8</string>
    <string name="cctv8_2">CCTV_8</string>
    <string name="cctv8_3">CCTV-8电视剧</string>
    <string name="cctv8_4">ＣＣＴＶ－８</string>
    <string name="cctv8hd">CCTV-8高清</string>
    <string name="cctv8hd_1">CCTV-8 高清</string>
    <string name="cctv9_1">CCTV-9</string>
    <string name="cctv9_2">ＣＣＴＶ－９纪录</string>
    <string name="cctv9_3">ＣＣＴＶ－９doc</string>
    <string name="cctv9hd">CCTV-9高清</string>
    <string name="cctv10_1">CCTV-10</string>
    <string name="cctv10_2">CCTV_10</string>
    <string name="cctv10_3">CCTV-10科教</string>
    <string name="cctv10_4">ＣＣＴＶ－１０</string>
    <string name="cctv10hd">CCTV-10高清</string>
    <string name="cctv11_1">CCTV-11</string>
    <string name="cctv11_2">CCTV_11</string>
    <string name="cctv11_3">CCTV-11戏曲</string>
    <string name="cctv11_4">ＣＣＴＶ－１１</string>
    <string name="cctv11hd">CCTV-11高清</string>
    <string name="cctv12_1">CCTV-12</string>
    <string name="cctv12_2">CCTV_12</string>
    <string name="cctv12_3">CCTV-12社会与法</string>
    <string name="cctv12_4">ＣＣＴＶ－１２</string>
    <string name="cctv12hd">CCTV-12高清</string>
    <string name="cctv13_1">CCTV-13</string>
    <string name="cctv13_2">CCTV-13新闻</string>
    <string name="cctv13_3">CCTV-新闻</string>
    <string name="cctv13_4">CCTV_新闻</string>
    <string name="cctv13_5">CCTV新闻</string>
    <string name="cctv13_6">ＣＣＴＶ－新闻</string>
    <string name="cctv13_7">ＣＣＴＶ－１３</string>
    <string name="cctv13_8">ＣＣＴＶ－news</string>
    <string name="cctv13_9">CCTV-News</string>
    <string name="cctv13hd">CCTV-13高清</string>
    <string name="cctv14_1">CCTV-14</string>
    <string name="cctv14_2">CCTV-少儿</string>
    <string name="cctv14_3">CCTV少儿</string>
    <string name="cctv14_4">CCTV-14少儿</string>
    <string name="cctv14_5">CCTV_少儿</string>
    <string name="cctv14_6">ＣＣＴＶ－少儿</string>
    <string name="cctv14_7">ＣＣＴＶ－１４</string>
    <string name="cctv14hd">CCTV-14高清</string>
    <string name="cctv14hd_1">CCTV-少儿高清</string>
    <string name="cctv15_1">CCTV-音乐</string>
    <string name="cctv15_2">ＣＣＴＶ－音乐</string>
    <string name="cctv15_3">ＣＣＴＶ－１５</string>
    <string name="cctveyu">CCTV俄语频道</string>
    <string name="cctvalaboyu">CCTV阿拉伯语频道</string>
    <string name="cctvguide">CCTV-电视指南</string>
    <string name="anhuiweishi">安徽卫视</string>
    <string name="beijingweishi">北京卫视</string>
    <string name="chongqingweishi">重庆卫视</string>
    <string name="dongfangweishi">东方卫视</string>
    <string name="shanghaiweishi">上海卫视</string>
    <string name="dongnanweishi">东南卫视</string>
    <string name="fujianweishi">福建卫视</string>
    <string name="guangxiweishi">广西卫视</string>
    <string name="guizhouweishi">贵州卫视</string>
    <string name="hebeiweishi">河北卫视</string>
    <string name="henanweishi">河南卫视</string>
    <string name="heilongjiangtai">黑龙江台</string>
    <string name="heilongjiangweishi">黑龙江卫视</string>
    <string name="hubeiweishi">湖北卫视</string>
    <string name="hunanweishi">湖南卫视</string>
    <string name="hunanweishigaoqing">湖南卫视高清</string>
    <string name="jiangsuweishi">江苏卫视</string>
    <string name="jiangxiweishi">江西卫视</string>
    <string name="jilinweishi">吉林卫视</string>
    <string name="liaoningweishi">辽宁卫视</string>
    <string name="neimenggutai">内蒙古台</string>
    <string name="neimengguweishi">内蒙古卫视</string>
    <string name="ningxiaweishi">宁夏卫视</string>
    <string name="shandongweishi">山东卫视</string>
    <string name="shanxiweishi">山西卫视</string>
    <string name="shanxi1weishi">陕西卫视</string>
    <string name="sichuanweishi">四川卫视</string>
    <string name="tianjinweishi">天津卫视</string>
    <string name="tianjingaoqing">天津高清</string>
    <string name="tianjingaoqing_1">天津卫视高清</string>
    <string name="yunnanweishi">云南卫视</string>
    <string name="xizangweishi">西藏卫视</string>
    <string name="xinjiangweishi">新疆卫视</string>
    <string name="zhejiangweishi">浙江卫视</string>
    <string name="shenzhengweishi">深圳卫视</string>
    <string name="fenghuangweishi">凤凰卫视</string>
    <string name="gansuweishi">甘肃卫视</string>
    <string name="qinghaiweishi">青海卫视</string>
    <string name="sichuangaoqing">四川高清</string>
    <string name="sichuanweishigaoqing">四川卫视高清</string>
    <string name="sichuanyingshigaoqing">四川影视高清</string>
    <string name="zhejiangweishigaoqing">浙江卫视(高清)</string>
    <string name="zhejiangweishigaoqing_1">浙江卫视高清</string>
    <string name="anhuigaoqing">安徽高清</string>
    <string name="anhuiweishigaoqing">安徽卫视高清</string>
    <string name="liaoninggaoqing">辽宁高清</string>
    <string name="liaoningweishigaoqing">辽宁卫视高清</string>
    <string name="zhejianggaoqing">浙江高清</string>
    <string name="beijingweishigaoqing">北京卫视(高清)</string>
    <string name="beijingweishigaoqing_1">北京卫视高清</string>
    <string name="beijinggaoqing">北京高清</string>
    <string name="shanghaiweishigaoqing">上海卫视(高清)</string>
    <string name="shanghaiweishigaoqing_1">上海卫视高清</string>
    <string name="shanghaigaoqing">上海高清</string>
    <string name="guangdongweishi">广东卫视</string>
    <string name="guangdongweishigaoqing">广东卫视(高清)</string>
    <string name="guangdongweishigaoqing_1">广东卫视高清</string>
    <string name="guangdonggaoqing">广东高清</string>
    <string name="shenzhengweishigaoqing">深圳卫视(高清)</string>
    <string name="shenzhengweishigaoqing_1">深圳卫视高清</string>
    <string name="shenzhenggaoqing">深圳高清</string>
    <string name="jiangsuweishigaoqing">江苏卫视(高清)</string>
    <string name="jiangsuweishigaoqing_1">江苏卫视高清</string>
    <string name="jiangsugaoqing">江苏高清</string>
    <string name="heilongjiangweishigaoqing">黑龙江卫视(高清)</string>
    <string name="heilongjiangweishigaoqing_1">黑龙江卫视高清</string>
    <string name="heilongjianggaoqing">黑龙江高清</string>
    <string name="hunangaoqing">湖南高清</string>
    <string name="hubeigaoqing">湖北高清</string>
    <string name="hubeiweishigaoqing">湖北卫视高清</string>
    <string name="shandonggaoqing">山东高清</string>
    <string name="shandongweishigaoqing">山东卫视高清</string>
    <string name="bingtuanweishi">兵团卫视</string>
    <string name="quanjishi">全纪实</string>
    <string name="guofangjunshi">国防军事</string>
    <string name="dieshipindao">碟市频道</string>
    <string name="dongfangcaijin">东方财经</string>
    <string name="dongmanxiuchang">动漫秀场</string>
    <string name="dushijuchang">都市剧场</string>
    <string name="emeidianying">峨眉电影</string>
    <string name="sihaidiaoyu">四海钓鱼</string>
    <string name="fazhitiandi">法治天地</string>
    <string name="fengyunzuqiu">风云足球</string>
    <string name="huanxiaojuchang">欢笑剧场</string>
    <string name="jiayougouwu">家有购物</string>
    <string name="jiatinglicai">家庭理财</string>
    <string name="jinsepindao">金色频道</string>
    <string name="jingbaotiyu">劲爆体育</string>
    <string name="jinyingkatong">金鹰卡通</string>
    <string name="jisuqiche">极速汽车</string>
    <string name="kuailechongwu">快乐宠物</string>
    <string name="laogushi">老故事</string>
    <string name="liangzhuangpindao">靓妆频道</string>
    <string name="liuxueshijie">留学世界</string>
    <string name="lvyoupindao">旅游频道</string>
    <string name="lvyouweishi">旅游卫视</string>
    <string name="meiliyinyue">魅力音乐</string>
    <string name="shenghuoshishang">生活时尚</string>
    <string name="shijiedili">世界地理</string>
    <string name="tianyuanweiqi">天元围棋</string>
    <string name="weishengjiankang">卫生健康</string>
    <string name="yingyufudao">英语辅导</string>
    <string name="yingyufudao1">英语辅导(试)</string>
    <string name="youxifengyun">游戏风云</string>
    <string name="youxifengyun1">游戏风云(试)</string>
    <string name="youxijingji">游戏竞技</string>
    <string name="yougouwu">优购物</string>
    <string name="yunyuzhinan">孕育指南</string>
    <string name="zhengquanzixun">证券资讯</string>
    <string name="jiaoyupindao">教育频道</string>
    <string name="zhongguojiaoyu1">中国教育1</string>
    <string name="zhongguoqixiang">中国气象</string>
    <string name="zhongguoqixiangtai">中央气象台</string>
    <string name="zhongguoqixiang1">中国气象(试)</string>
    <string name="jingcaisichuan">睛彩四川</string>
    <string name="xinyule">新娱乐</string>
    <string name="xingyule">星娱乐</string>
    <string name="xingyuanyinhua">星元*映画</string>
    <string name="xingyuanjuchang">星元*剧场</string>
    <string name="xingyuanxinzhi">星元*新知</string>
    <string name="xingyuanxinyi">星元*新艺</string>
    <string name="xingyuanai">星元●爱</string>
    <string name="xingyuanchengzhang">星元●成长</string>
    <string name="xingyuanoumeijuchang">星元●欧美剧场</string>
    <string name="xingyuanoumeiyuanxian">星元●欧美院线</string>
    <string name="xingyuanshouying">星元●首映</string>
    <string name="xingyuanxinzhi1">星元●新知</string>
    <string name="xingyuanyazhoujuchang">星元●亚洲剧场</string>
    <string name="xingyuanyazhouyuanxian">星元●亚洲院线</string>
    <string name="jiatingjuchangdianshiju">家庭剧场(电视剧)</string>
    <string name="jingdianjuchangdianshiju">经典剧场(电视剧)</string>
    <string name="threeDpindao">3D频道</string>
    <string name="HBO">HBO</string>
    <string name="TVB8">TVB8</string>
    <string name="BBC">BBC</string>
    <string name="KBS">KBS</string>
    <string name="NHK">NHK</string>
    <string name="sichuan2">四川－2</string>
    <string name="sichuanwenhualvyou">四川文化旅游</string>
    <string name="sichuan3">四川－3</string>
    <string name="sichuanjingji">四川经济</string>
    <string name="sichuan4">四川－4</string>
    <string name="sichuanxinwentongxun">四川新闻通讯</string>
    <string name="sichuan5">四川－5</string>
    <string name="sichuanyingshiwenhua">四川影视文化</string>
    <string name="sichuan6">四川－6</string>
    <string name="sichuanxingkonggouwu">四川星空购物</string>
    <string name="sichuan7">四川－7</string>
    <string name="sichuanfunvertong">四川妇女儿童</string>
    <string name="sichuan8">四川－8</string>
    <string name="sichuankejiao">四川科教</string>
    <string name="sctv09">SCTV-09</string>
    <string name="sichuan9">四川－9</string>
    <string name="poweroff">Power Off</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="menu">Menu</string>
    <string name="play_pause">Play/Pause</string>
    <string name="home">Home</string>
    <string name="vol">VOL</string>
    <string name="fwrw">Fw/Rw</string>
</resources>